<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" 
    android:background="@color/black"
    android:id="@+id/menu_parent"
    >
	    
    <!-- Title of game -->
    <ImageView
        android:id="@+id/img_title"
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:contentDescription="@string/app_title_contentDes"
    	android:background="@drawable/title"
        />
    
	<!-- Starts a normal game -->
	<Button
	    android:id="@+id/btn_normal_game"
	    android:text="@string/menu_normal_game"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="normalGame"
	    android:layout_centerInParent="true"
    	android:layout_centerHorizontal="true"
        android:background="@drawable/red_button"
    	style="@style/button_text"
	    />
	
	<!-- Starts a challenge game -->
	<Button
	    android:id="@+id/btn_challenge_game"
	    android:text="@string/menu_challenge_game"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="challengeGame"
	    android:layout_centerInParent="true"
    	android:layout_below="@id/btn_normal_game"	
	    android:layout_centerHorizontal="true"
        android:background="@drawable/red_button"
    	style="@style/button_text"
	    />
	
	<!-- Displays the about -->
	<Button
	    android:id="@+id/btn_how_play"
	    android:text="@string/menu_how_play"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="howPlay"
	    android:layout_centerInParent="true"
    	android:layout_below="@id/btn_challenge_game"	
	    android:layout_centerHorizontal="true"
        android:background="@drawable/red_button"
    	style="@style/button_text"
	    />
	
	<!-- Displays the high scores -->
	<Button
	    android:id="@+id/btn_high_scores"
	    android:text="@string/menu_high_scores"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentBottom="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:onClick="highScores"
        android:background="@drawable/red_button"
    	style="@style/button_text"
	    />
	
</RelativeLayout>
