<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@android:color/black"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_gameover_title"
            android:layout_width="182dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/str_gameover" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_popup_back"
                style="@style/button_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/red_button"
                android:text="@string/menu_back" />

            <Button
                android:id="@+id/btn_keep_playing"
                style="@style/button_text"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:background="@drawable/red_button"
                android:text="@string/str_keepplaying" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>